set overflow hidden to prevent scrolling

--- a/src/components/Cat.scss
+++ b/src/components/Cat.scss
@@ -4,6 +4,11 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
+    top: 0;
+    left: 0;
+    margin: 0;
+    position: absolute;
+    overflow: hidden;
 }
 
 .cat {
